--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-medialibrary": "^10.7",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
